force-app/main/default/objects/Outbound_log__c/Outbound_log__c.object-meta.xml
<CustomObject>
    <label>Outbound log</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Outbound log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>