force-app/main/default/objects/Outbound_log__c/fields/Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_Type__c</fullName>
    <label>Method Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>