force-app/main/default/objects/Outbound_log__c/fields/Query_Paramters__c.field-meta.xml
<CustomField>
    <fullName>Query_Paramters__c</fullName>
    <description>In serialised form</description>
    <label>Query Paramters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>