force-app/main/default/objects/Outbound_log__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <label>Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>