force-app/main/default/objects/Outbound_log__c/fields/Response_status_code__c.field-meta.xml
<CustomField>
    <fullName>Response_status_code__c</fullName>
    <label>Response status code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>