force-app/main/default/objects/Outbound_log__c/fields/Saved_Request__c.field-meta.xml
<CustomField>
    <fullName>Saved_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the request the transaction was made from.</description>
    <label>Saved Request</label>
    <referenceTo>Saved_Request__c</referenceTo>
    <relationshipName>Real_Time_Outbound_logs</relationshipName>
    <type>Lookup</type>
</CustomField>