force-app/main/default/objects/Outbound_log__c/fields/Time_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Time_Elapsed__c</fullName>
    <inlineHelpText>In Seconds</inlineHelpText>
    <label>Time Elapsed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>