force-app/main/default/objects/Outbound_log__c/fields/Transaction_Origin__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Origin__c</fullName>
    <description>This field determines whether the transaction was logged from the UI by an end user or automatically logged after a scheduled job makes a periodic request to target.</description>
    <label>Transaction Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled - Asynchronous</fullName>
            </value>
            <value>
                <fullName>UI - Synchronous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>