force-app/main/default/objects/Outbound_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Method_Type__c</columns>
    <columns>Response_status_code__c</columns>
    <columns>URL__c</columns>
    <columns>Transaction_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>